fixing image clipping issue

--- a/src/App.css
+++ b/src/App.css
@@ -62,9 +62,9 @@
 }
 
 .main-content-div {
-  border-style: solid;
+  /* border-style: solid;
   border-width: 1px;
-  border-color: red;
+  border-color: red; */
 
   max-width: var(--max-content-width);
   margin-top: 70px;
