--- a/src/components/Header/CustomHeader.css
+++ b/src/components/Header/CustomHeader.css
@@ -1,8 +1,8 @@
 .header-row {
     color: var(--main-font-color);
-    border-style: solid;
+    /* border-style: solid;
     border-width: 1px;
-    border-color: green;
+    border-color: green; */
     max-width: var(--max-content-width);
     margin-left: auto;
     margin-right: auto;
@@ -15,9 +15,9 @@
 
 .header-icon-container {
     color: var(--main-font-color);
-    border-style: solid;
+    /* border-style: solid;
     border-width: 1px;
-    border-color: blue;
+    border-color: blue; */
     padding-left: 15px;
 }
 
